# OpenXcom

./: .astylerc  .clang-format  .cproject  .editorconfig  .gitattributes  .gitignore  .project  .travis.yml  AbandonGameState.cpp  AbandonGameState.h  ArrowButton.cpp  ArrowButton.h  Bar.cpp  Bar.h  Base.cpp  Base.h  BaseFacility.cpp  BaseFacility.h  BaseInfoState.cpp  BaseInfoState.h  BaseNameState.cpp  BaseNameState.h  BaseView.cpp  BaseView.h  BasescapeDismantleState.cpp  BasescapeDismantleState.h  BasescapeErrorState.cpp  BasescapeErrorState.h  BasescapeState.cpp  BasescapeState.h  Brewfile.travis  BuildFacilitiesState.cpp  BuildFacilitiesState.h  BuildNewBaseState.cpp  BuildNewBaseState.h  Button.cpp  Button.h  CHANGELOG.txt  CMakeLists.txt  City.cpp  (+209 more)
dep/: CMakeLists.txt
dep/SDL2/: CMakeLists.txt
dep/SDL2_gfx/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  SDL2_framerate.c  SDL2_gfx.pc.in  SDL2_gfx.sln  SDL2_gfx.vcxproj  SDL2_gfxPrimitives.c  SDL2_imageFilter.c  SDL2_rotozoom.c  configure.in
dep/SDL2_image/: Android.mk  CHANGES.txt  CMakeLists.txt  COPYING.txt  IMG.c  IMG_WIC.c  IMG_bmp.c  IMG_gif.c  IMG_jpg.c  IMG_lbm.c  IMG_pcx.c  IMG_png.c  IMG_pnm.c  IMG_svg.c  IMG_tga.c  IMG_tif.c  IMG_webp.c  IMG_xcf.c  IMG_xpm.c  IMG_xv.c  IMG_xxx.c  Makefile.am  README.txt  SDL2_image.spec  configure.in  miniz.h  nanosvg.h  showimage.c  version.rc
dep/SDL2_mixer/: CHANGES.txt  CMakeLists.txt  COPYING.txt  README.txt  version.rc
dep/SDL_GFX/: CMakeLists.txt  README  SDL_gfx.vcxproj  SDL_gfxPrimitives.c  SDL_gfx_VS2008.sln  SDL_gfx_VS2008.vcproj  SDL_gfx_VS2010.sln  SDL_gfx_VS2010.vcxproj  SDL_rotozoom.c
dep/YAML/: CMakeLists.txt
dep/jpeglib/: CMakeLists.txt
dep/libpng/: CMakeLists.txt
dep/libtiff/: CMakeLists.txt  configure.ac  tiff.spec
dep/zlib/: CMakeLists.txt  zutil.c
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  language_id.html  openxcom.6  openxcom.6.xml
src/: CMakeLists.txt  Makefile  Makefile.gcc-pch  Makefile.simple  OpenXcom.2008.sln  OpenXcom.2008.vcproj  OpenXcom.2010.sln  OpenXcom.2010.vcxproj  OpenXcom.2010.vcxproj.filters  OpenXcom.2015.sln  OpenXcom.cbp  OpenXcom.rc  aresame.h  dirent.h  fmath.h  git_version.h.in  lodepng.cpp  lodepng.h  main.cpp  oldOpenXcom.rc  pch.cpp  pch.h  resource.h  version.cpp  version.h  version.h.in
src/Basescape/: BaseInfoState.cpp  BaseInfoState.h  BaseView.cpp  BaseView.h  BasescapeErrorState.cpp  BasescapeErrorState.h  BasescapeState.cpp  BasescapeState.h  BuildFacilitiesState.cpp  BuildFacilitiesState.h  CMakeLists.txt  CraftArmorState.cpp  CraftArmorState.h  CraftEquipmentState.cpp  CraftEquipmentState.h  CraftInfoState.cpp  CraftInfoState.h  CraftSoldiersState.cpp  CraftSoldiersState.h  CraftWeaponsState.cpp  CraftWeaponsState.h  CraftsState.cpp  CraftsState.h  DismantleFacilityState.cpp  DismantleFacilityState.h  ListPossibleProductionState.cpp  ListPossibleProductionState.h  ManageAlienContainmentState.cpp  ManageAlienContainmentState.h  ManufactureInfoState.cpp  ManufactureInfoState.h  ManufactureStartState.cpp  ManufactureStartState.h  ManufactureState.cpp  ManufactureState.h  MedalsInfoState.cpp  MiniBaseView.cpp  MiniBaseView.h  MonthlyCostsState.cpp  MonthlyCostsState.h  (+66 more)
src/Battlescape/: AIModule.cpp  AIModule.h  AbortMissionState.cpp  AbortMissionState.h  ActionMenuItem.cpp  ActionMenuItem.h  ActionMenuState.cpp  ActionMenuState.h  AggroBAIState.cpp  AggroBAIState.h  AlienBAIState.cpp  AlienBAIState.h  AliensCrashState.cpp  AliensCrashState.h  BattleAIState.cpp  BattleAIState.h  BattleAction.cpp  BattleAction.h  BattleState.cpp  BattleState.h  BattlescapeGame.cpp  BattlescapeGame.h  BattlescapeGenerator.cpp  BattlescapeGenerator.h  BattlescapeMessage.cpp  BattlescapeMessage.h  BattlescapeOptionsState.cpp  BattlescapeOptionsState.h  BattlescapeState.cpp  BattlescapeState.h  BriefingCrashState.cpp  BriefingCrashState.h  BriefingState.cpp  BriefingState.h  BulletSprite.cpp  BulletSprite.h  Camera.cpp  Camera.h  CannotReequipState.cpp  CannotReequipState.h  (+101 more)
src/Engine/: Action.cpp  Action.h  AdlibMusic.cpp  AdlibMusic.h  BundlePath.h  BundlePath.mm  CatFile.cpp  CatFile.h  CrossPlatform.cpp  CrossPlatform.h  DosFont.h  Exception.cpp  Exception.h  FastLineClip.cpp  FastLineClip.h  FileMap.cpp  FileMap.h  FixedFloat.h  Flc.cpp  Flc.h  FlcPlayer.cpp  FlcPlayer.h  Font.cpp  Font.h  GMCat.cpp  GMCat.h  Game.cpp  Game.h  GraphSubset.h  HashMap.h  InteractiveSurface.cpp  InteractiveSurface.h  InvNorm.cpp  InvNorm.h  Language.cpp  Language.h  LanguagePlurality.cpp  LanguagePlurality.h  LocalizedText.cpp  LocalizedText.h  (+50 more)
src/Geoscape/: AbandonGameState.cpp  AbandonGameState.h  AlienBaseState.cpp  AlienBaseState.h  AlienTerrorState.cpp  AlienTerrorState.h  AllocatePsiTrainingState.cpp  AllocatePsiTrainingState.h  BaseDefenseState.cpp  BaseDefenseState.h  BaseDestroyedState.cpp  BaseDestroyedState.h  BaseNameState.cpp  BaseNameState.h  BuildNewBaseState.cpp  BuildNewBaseState.h  CannotRearmState.cpp  CannotRearmState.h  ConfirmCydoniaState.cpp  ConfirmCydoniaState.h  ConfirmDestinationState.cpp  ConfirmDestinationState.h  ConfirmEventDestinationState.cpp  ConfirmEventDestinationState.h  ConfirmLandingState.cpp  ConfirmLandingState.h  ConfirmNewBaseState.cpp  ConfirmNewBaseState.h  Cord.h  CraftErrorState.cpp  CraftErrorState.h  CraftPatrolState.cpp  CraftPatrolState.h  DebriefingState.cpp  DefeatState.cpp  DefeatState.h  DogfightErrorState.cpp  DogfightErrorState.h  DogfightState.cpp  DogfightState.h  (+70 more)
src/Interface/: ArrowButton.cpp  ArrowButton.h  Bar.cpp  Bar.h  BattlescapeButton.cpp  BattlescapeButton.h  ComboBox.cpp  ComboBox.h  Cursor.cpp  Cursor.h  FpsCounter.cpp  FpsCounter.h  Frame.cpp  Frame.h  ImageButton.cpp  ImageButton.h  NumberText.cpp  NumberText.h  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  Text.cpp  Text.h  TextButton.cpp  TextButton.h  TextEdit.cpp  TextEdit.h  TextList.cpp  TextList.h  ToggleTextButton.cpp  ToggleTextButton.h  Window.cpp  Window.h
src/Menu/: AbandonGameState.cpp  AbandonGameState.h  AdvancedOptionsState.cpp  AutoSaveState.h  (+95 more)
(+771 files in other folders)
