EXTRA_DIST = autogen.sh docs/Doxyfile docs/language_id.html \
	src/Makefile src/OpenXcom.*

pkgdata_DATA = bin/DATA/README.txt

languagedir = $(pkgdatadir)/Language
language_DATA = \
	bin/DATA/Language/Big.fnt \
	bin/DATA/Language/Czech.lng \
	bin/DATA/Language/English.lng \
	bin/DATA/Language/EnglishUk.lng \
	bin/DATA/Language/Font.dat \
	bin/DATA/Language/French.geo \
	bin/DATA/Language/French.lng \
	bin/DATA/Language/German.geo \
	bin/DATA/Language/German.lng \
	bin/DATA/Language/Italian.geo \
	bin/DATA/Language/Italian.lng \
	bin/DATA/Language/Polish.geo \
	bin/DATA/Language/Polish.lng \
	bin/DATA/Language/Romanian.lng \
	bin/DATA/Language/Russian.geo \
	bin/DATA/Language/Russian.lng \
	bin/DATA/Language/Small.fnt \
	bin/DATA/Language/Spanish.geo \
	bin/DATA/Language/Spanish.lng

namedir = $(pkgdatadir)/SoldierName
name_DATA = \
	bin/DATA/SoldierName/American.nam \
	bin/DATA/SoldierName/British.nam \
	bin/DATA/SoldierName/French.nam \
	bin/DATA/SoldierName/German.nam \
	bin/DATA/SoldierName/Japanese.nam \
	bin/DATA/SoldierName/Russian.nam

bin_PROGRAMS = openxcom
openxcom_LDFLAGS = -Wl,--as-needed
openxcom_LDADD = $(SDL_LIBS) $(YAML_LIBS)
openxcom_CXXFLAGS = -Wall \
	$(SDL_CFLAGS) \
	$(YAML_CFLAGS) \
	-DDATADIR=\"$(pkgdatadir)\"
openxcom_SOURCES = \
	src/Basescape/BaseInfoState.cpp \
	src/Basescape/BaseInfoState.h \
	src/Basescape/BasescapeErrorState.cpp \
	src/Basescape/BasescapeErrorState.h \
	src/Basescape/BasescapeState.cpp \
	src/Basescape/BasescapeState.h \
	src/Basescape/BaseView.cpp \
	src/Basescape/BaseView.h \
	src/Basescape/BuildFacilitiesState.cpp \
	src/Basescape/BuildFacilitiesState.h \
	src/Basescape/CraftArmorState.cpp \
	src/Basescape/CraftArmorState.h \
	src/Basescape/CraftEquipmentState.cpp \
	src/Basescape/CraftEquipmentState.h \
	src/Basescape/CraftInfoState.cpp \
	src/Basescape/CraftInfoState.h \
	src/Basescape/CraftSoldiersState.cpp \
	src/Basescape/CraftSoldiersState.h \
	src/Basescape/CraftsState.cpp \
	src/Basescape/CraftsState.h \
	src/Basescape/CraftWeaponsState.cpp \
	src/Basescape/CraftWeaponsState.h \
	src/Basescape/DismantleFacilityState.cpp \
	src/Basescape/DismantleFacilityState.h \
	src/Basescape/ManufactureState.cpp \
	src/Basescape/ManufactureState.h \
	src/Basescape/MiniBaseView.cpp \
	src/Basescape/MiniBaseView.h \
	src/Basescape/MonthlyCostsState.cpp \
	src/Basescape/MonthlyCostsState.h \
	src/Basescape/PlaceFacilityState.cpp \
	src/Basescape/PlaceFacilityState.h \
	src/Basescape/PlaceLiftState.cpp \
	src/Basescape/PlaceLiftState.h \
	src/Basescape/PurchaseErrorState.cpp \
	src/Basescape/PurchaseErrorState.h \
	src/Basescape/PurchaseState.cpp \
	src/Basescape/PurchaseState.h \
	src/Basescape/ResearchState.cpp \
	src/Basescape/ResearchState.h \
	src/Basescape/SellState.cpp \
	src/Basescape/SellState.h \
	src/Basescape/SoldierArmorState.cpp \
	src/Basescape/SoldierArmorState.h \
	src/Basescape/SoldierInfoState.cpp \
	src/Basescape/SoldierInfoState.h \
	src/Basescape/SoldiersState.cpp \
	src/Basescape/SoldiersState.h \
	src/Basescape/StoresState.cpp \
	src/Basescape/StoresState.h \
	src/Basescape/TransferBaseState.cpp \
	src/Basescape/TransferBaseState.h \
	src/Basescape/TransferConfirmState.cpp \
	src/Basescape/TransferConfirmState.h \
	src/Basescape/TransferItemsState.cpp \
	src/Basescape/TransferItemsState.h \
	src/Basescape/TransfersState.cpp \
	src/Basescape/TransfersState.h \
	src/Battlescape/AbortMissionState.cpp \
	src/Battlescape/AbortMissionState.h \
	src/Battlescape/ActionMenuItem.cpp \
	src/Battlescape/ActionMenuItem.h \
	src/Battlescape/ActionMenuState.cpp \
	src/Battlescape/ActionMenuState.h \
	src/Battlescape/AggroBAIState.cpp \
	src/Battlescape/AggroBAIState.h \
	src/Battlescape/BattleAIState.cpp \
	src/Battlescape/BattleAIState.h \
	src/Battlescape/BattlescapeGenerator.cpp \
	src/Battlescape/BattlescapeGenerator.h \
	src/Battlescape/BattlescapeMessage.cpp \
	src/Battlescape/BattlescapeMessage.h \
	src/Battlescape/BattlescapeOptionsState.cpp \
	src/Battlescape/BattlescapeOptionsState.h \
	src/Battlescape/BattlescapeState.cpp \
	src/Battlescape/BattlescapeState.h \
	src/Battlescape/BattleState.cpp \
	src/Battlescape/BattleState.h \
	src/Battlescape/BriefingCrashState.cpp \
	src/Battlescape/BriefingCrashState.h \
	src/Battlescape/BulletSprite.cpp \
	src/Battlescape/BulletSprite.h \
	src/Battlescape/ExplosionBState.cpp \
	src/Battlescape/ExplosionBState.h \
	src/Battlescape/Explosion.cpp \
	src/Battlescape/Explosion.h \
	src/Battlescape/Inventory.cpp \
	src/Battlescape/Inventory.h \
	src/Battlescape/InventoryState.cpp \
	src/Battlescape/InventoryState.h \
	src/Battlescape/Map.cpp \
	src/Battlescape/Map.h \
	src/Battlescape/NextTurnState.cpp \
	src/Battlescape/NextTurnState.h \
	src/Battlescape/Pathfinding.cpp \
	src/Battlescape/Pathfinding.h \
	src/Battlescape/PathfindingNode.cpp \
	src/Battlescape/PathfindingNode.h \
	src/Battlescape/PatrolBAIState.cpp \
	src/Battlescape/PatrolBAIState.h \
	src/Battlescape/Position.cpp \
	src/Battlescape/Position.h \
	src/Battlescape/PrimeGrenadeState.cpp \
	src/Battlescape/PrimeGrenadeState.h \
	src/Battlescape/Projectile.cpp \
	src/Battlescape/ProjectileFlyBState.cpp \
	src/Battlescape/ProjectileFlyBState.h \
	src/Battlescape/Projectile.h \
	src/Battlescape/TerrainModifier.cpp \
	src/Battlescape/TerrainModifier.h \
	src/Battlescape/UnitFallBState.cpp \
	src/Battlescape/UnitFallBState.h \
	src/Battlescape/UnitInfoState.cpp \
	src/Battlescape/UnitInfoState.h \
	src/Battlescape/UnitSprite.cpp \
	src/Battlescape/UnitSprite.h \
	src/Battlescape/UnitTurnBState.cpp \
	src/Battlescape/UnitTurnBState.h \
	src/Battlescape/UnitWalkBState.cpp \
	src/Battlescape/UnitWalkBState.h \
	src/Battlescape/WarningMessage.cpp \
	src/Battlescape/WarningMessage.h \
	src/dirent.h \
	src/Engine/Action.cpp \
	src/Engine/Action.h \
	src/Engine/CatFile.cpp \
	src/Engine/CatFile.h \
	src/Engine/CrossPlatform.cpp \
	src/Engine/CrossPlatform.h \
	src/Engine/Exception.cpp \
	src/Engine/Exception.h \
	src/Engine/Font.cpp \
	src/Engine/Font.h \
	src/Engine/Game.cpp \
	src/Engine/Game.h \
	src/Engine/GMCat.cpp \
	src/Engine/GMCat.h \
	src/Engine/InteractiveSurface.cpp \
	src/Engine/InteractiveSurface.h \
	src/Engine/Language.cpp \
	src/Engine/Language.h \
	src/Engine/Music.cpp \
	src/Engine/Music.h \
	src/Engine/Options.cpp \
	src/Engine/Options.h \
	src/Engine/Palette.cpp \
	src/Engine/Palette.h \
	src/Engine/RNG.cpp \
	src/Engine/RNG.h \
	src/Engine/Screen.cpp \
	src/Engine/Screen.h \
	src/Engine/Sound.cpp \
	src/Engine/Sound.h \
	src/Engine/SoundSet.cpp \
	src/Engine/SoundSet.h \
	src/Engine/State.cpp \
	src/Engine/State.h \
	src/Engine/Surface.cpp \
	src/Engine/Surface.h \
	src/Engine/SurfaceSet.cpp \
	src/Engine/SurfaceSet.h \
	src/Engine/Timer.cpp \
	src/Engine/Timer.h \
	src/Geoscape/AbandonGameState.cpp \
	src/Geoscape/AbandonGameState.h \
	src/Geoscape/BaseNameState.cpp \
	src/Geoscape/BaseNameState.h \
	src/Geoscape/BuildNewBaseState.cpp \
	src/Geoscape/BuildNewBaseState.h \
	src/Geoscape/CannotRearmState.cpp \
	src/Geoscape/CannotRearmState.h \
	src/Geoscape/ConfirmDestinationState.cpp \
	src/Geoscape/ConfirmDestinationState.h \
	src/Geoscape/ConfirmLandingState.cpp \
	src/Geoscape/ConfirmLandingState.h \
	src/Geoscape/ConfirmNewBaseState.cpp \
	src/Geoscape/ConfirmNewBaseState.h \
	src/Geoscape/CraftPatrolState.cpp \
	src/Geoscape/CraftPatrolState.h \
	src/Geoscape/DebriefingState.cpp \
	src/Geoscape/DebriefingState.h \
	src/Geoscape/DogfightState.cpp \
	src/Geoscape/DogfightState.h \
	src/Geoscape/FundingState.cpp \
	src/Geoscape/FundingState.h \
	src/Geoscape/GeoscapeCraftState.cpp \
	src/Geoscape/GeoscapeCraftState.h \
	src/Geoscape/GeoscapeErrorState.cpp \
	src/Geoscape/GeoscapeErrorState.h \
	src/Geoscape/GeoscapeState.cpp \
	src/Geoscape/GeoscapeState.h \
	src/Geoscape/Globe.cpp \
	src/Geoscape/Globe.h \
	src/Geoscape/GraphsState.cpp \
	src/Geoscape/GraphsState.h \
	src/Geoscape/InterceptState.cpp \
	src/Geoscape/InterceptState.h \
	src/Geoscape/ItemsArrivingState.cpp \
	src/Geoscape/ItemsArrivingState.h \
	src/Geoscape/LowFuelState.cpp \
	src/Geoscape/LowFuelState.h \
	src/Geoscape/MonthlyReportState.cpp \
	src/Geoscape/MonthlyReportState.h \
	src/Geoscape/MultipleTargetsState.cpp \
	src/Geoscape/MultipleTargetsState.h \
	src/Geoscape/OptionsState.cpp \
	src/Geoscape/OptionsState.h \
	src/Geoscape/Polygon.cpp \
	src/Geoscape/Polygon.h \
	src/Geoscape/Polyline.cpp \
	src/Geoscape/Polyline.h \
	src/Geoscape/ProductionCompleteState.cpp \
	src/Geoscape/ProductionCompleteState.h \
	src/Geoscape/SelectDestinationState.cpp \
	src/Geoscape/SelectDestinationState.h \
	src/Geoscape/TargetInfoState.cpp \
	src/Geoscape/TargetInfoState.h \
	src/Geoscape/UfoDetectedState.cpp \
	src/Geoscape/UfoDetectedState.h \
	src/Geoscape/UfoLostState.cpp \
	src/Geoscape/UfoLostState.h \
	src/Interface/ArrowButton.cpp \
	src/Interface/ArrowButton.h \
	src/Interface/Bar.cpp \
	src/Interface/Bar.h \
	src/Interface/Cursor.cpp \
	src/Interface/Cursor.h \
	src/Interface/FpsCounter.cpp \
	src/Interface/FpsCounter.h \
	src/Interface/ImageButton.cpp \
	src/Interface/ImageButton.h \
	src/Interface/NumberText.cpp \
	src/Interface/NumberText.h \
	src/Interface/TextButton.cpp \
	src/Interface/TextButton.h \
	src/Interface/Text.cpp \
	src/Interface/TextEdit.cpp \
	src/Interface/TextEdit.h \
	src/Interface/Text.h \
	src/Interface/TextList.cpp \
	src/Interface/TextList.h \
	src/Interface/Window.cpp \
	src/Interface/Window.h \
	src/main.cpp \
	src/Menu/LanguageState.cpp \
	src/Menu/LanguageState.h \
	src/Menu/LoadGameState.cpp \
	src/Menu/LoadGameState.h \
	src/Menu/MainMenuState.cpp \
	src/Menu/MainMenuState.h \
	src/Menu/NewGameState.cpp \
	src/Menu/NewGameState.h \
	src/Menu/NoteState.cpp \
	src/Menu/NoteState.h \
	src/Menu/SaveGameState.cpp \
	src/Menu/SaveGameState.h \
	src/Menu/StartState.cpp \
	src/Menu/StartState.h \
	src/Menu/TestState.cpp \
	src/Menu/TestState.h \
	src/resource.h \
	src/Resource/ResourcePack.cpp \
	src/Resource/ResourcePack.h \
	src/Resource/XcomResourcePack.cpp \
	src/Resource/XcomResourcePack.h \
	src/Ruleset/ArticleDefinition.cpp \
	src/Ruleset/ArticleDefinition.h \
	src/Ruleset/City.cpp \
	src/Ruleset/City.h \
	src/Ruleset/MapBlock.cpp \
	src/Ruleset/MapBlock.h \
	src/Ruleset/MapData.cpp \
	src/Ruleset/MapData.h \
	src/Ruleset/MapDataSet.cpp \
	src/Ruleset/MapDataSet.h \
	src/Ruleset/RuleAlien.cpp \
	src/Ruleset/RuleAlien.h \
	src/Ruleset/RuleArmor.cpp \
	src/Ruleset/RuleArmor.h \
	src/Ruleset/RuleBaseFacility.cpp \
	src/Ruleset/RuleBaseFacility.h \
	src/Ruleset/RuleCountry.cpp \
	src/Ruleset/RuleCountry.h \
	src/Ruleset/RuleCraft.cpp \
	src/Ruleset/RuleCraft.h \
	src/Ruleset/RuleCraftWeapon.cpp \
	src/Ruleset/RuleCraftWeapon.h \
	src/Ruleset/RuleInventory.cpp \
	src/Ruleset/RuleInventory.h \
	src/Ruleset/RuleItem.cpp \
	src/Ruleset/RuleItem.h \
	src/Ruleset/RuleRegion.cpp \
	src/Ruleset/RuleRegion.h \
	src/Ruleset/Ruleset.cpp \
	src/Ruleset/Ruleset.h \
	src/Ruleset/RuleSoldier.cpp \
	src/Ruleset/RuleSoldier.h \
	src/Ruleset/RuleTerrain.cpp \
	src/Ruleset/RuleTerrain.h \
	src/Ruleset/RuleUfo.cpp \
	src/Ruleset/RuleUfo.h \
	src/Ruleset/SoldierNamePool.cpp \
	src/Ruleset/SoldierNamePool.h \
	src/Ruleset/XcomRuleset.cpp \
	src/Ruleset/XcomRuleset.h \
	src/Savegame/Alien.cpp \
	src/Savegame/Alien.h \
	src/Savegame/Base.cpp \
	src/Savegame/BaseFacility.cpp \
	src/Savegame/BaseFacility.h \
	src/Savegame/Base.h \
	src/Savegame/BattleItem.cpp \
	src/Savegame/BattleItem.h \
	src/Savegame/BattleUnit.cpp \
	src/Savegame/BattleUnit.h \
	src/Savegame/Country.cpp \
	src/Savegame/Country.h \
	src/Savegame/Craft.cpp \
	src/Savegame/Craft.h \
	src/Savegame/CraftWeapon.cpp \
	src/Savegame/CraftWeapon.h \
	src/Savegame/GameTime.cpp \
	src/Savegame/GameTime.h \
	src/Savegame/ItemContainer.cpp \
	src/Savegame/ItemContainer.h \
	src/Savegame/MovingTarget.cpp \
	src/Savegame/MovingTarget.h \
	src/Savegame/Node.cpp \
	src/Savegame/Node.h \
	src/Savegame/NodeLink.cpp \
	src/Savegame/NodeLink.h \
	src/Savegame/Region.cpp \
	src/Savegame/Region.h \
	src/Savegame/SavedBattleGame.cpp \
	src/Savegame/SavedBattleGame.h \
	src/Savegame/SavedGame.cpp \
	src/Savegame/SavedGame.h \
	src/Savegame/Soldier.cpp \
	src/Savegame/Soldier.h \
	src/Savegame/Target.cpp \
	src/Savegame/Target.h \
	src/Savegame/Tile.cpp \
	src/Savegame/Tile.h \
	src/Savegame/Transfer.cpp \
	src/Savegame/Transfer.h \
	src/Savegame/Ufo.cpp \
	src/Savegame/Ufo.h \
	src/Savegame/UfopaediaSaved.cpp \
	src/Savegame/UfopaediaSaved.h \
	src/Savegame/Unit.cpp \
	src/Savegame/Unit.h \
	src/Savegame/Waypoint.cpp \
	src/Savegame/Waypoint.h \
	src/Ufopaedia/ArticleStateBaseFacility.cpp \
	src/Ufopaedia/ArticleStateBaseFacility.h \
	src/Ufopaedia/ArticleState.cpp \
	src/Ufopaedia/ArticleStateCraft.cpp \
	src/Ufopaedia/ArticleStateCraft.h \
	src/Ufopaedia/ArticleStateCraftWeapon.cpp \
	src/Ufopaedia/ArticleStateCraftWeapon.h \
	src/Ufopaedia/ArticleState.h \
	src/Ufopaedia/ArticleStateItem.cpp \
	src/Ufopaedia/ArticleStateItem.h \
	src/Ufopaedia/ArticleStateText.cpp \
	src/Ufopaedia/ArticleStateText.h \
	src/Ufopaedia/ArticleStateTextImage.cpp \
	src/Ufopaedia/ArticleStateTextImage.h \
	src/Ufopaedia/ArticleStateUfo.cpp \
	src/Ufopaedia/ArticleStateUfo.h \
	src/Ufopaedia/Ufopaedia.cpp \
	src/Ufopaedia/Ufopaedia.h \
	src/Ufopaedia/UfopaediaSelectState.cpp \
	src/Ufopaedia/UfopaediaSelectState.h \
	src/Ufopaedia/UfopaediaStartState.cpp \
	src/Ufopaedia/UfopaediaStartState.h
